--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random password generator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
@@ -12,7 +13,7 @@
         <div class="result-container">
             <span id="result"></span>
             <button class="btn" id="clipboard">
-                <i class="fa-solid fa-clipboard"></i>
+                <i class="fa fa-clipboard"></i>
             </button>
         </div>
         <div class="options">
@@ -37,7 +38,7 @@
                 <input type="checkbox" id="symbols" checked />
             </div>
         </div>
-        <button class="btn-large" id="generate">
+        <button class="btn btn-large" id="generate">
             Generate password
         </button>
     </div>
